# python-project-52

./: .env.example  .gitignore  Makefile  README.md  procfile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yaml
task_manager/: forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/armatures/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/armaturesklas/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/columns/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/concrete/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/concrete/migrations/: 0001_initial.py
task_manager/dashboard/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  statuses_test_data.json  tasks.json  test_data.json  users.json  users_test_data.json
task_manager/floors/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/links/: apps.py  urls.py  views.py
task_manager/links/cfs/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/projects/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/sections/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/slabs/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: homepage.html  index.html  info.html  links.html  login.html  management.html  version.html
task_manager/transitions/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/walls/: apps.py  forms.py  models.py  urls.py  views.py
(+104 files in other folders)
