[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["devdenh <denisaminov74@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]


[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
flake8 = "^5.0.4"
pytest-django = "^4.5.2"
django-extensions = "^3.2.1"
ipython = "^8.5.0"
python-dotenv = "^0.21.0"
dj-database-url = "^1.0.0"
coverage = "^6.5.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
