[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["devdenh <denisaminov74@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]


[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
django-bootstrap4 = "^3.0.1"
python-dotenv = "^0.17.1"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
