[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["devdenh <denisaminov74@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]


[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = ">=0.5.0,<=1.0.0"
Django = "^4.1"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
django-filter = "^22.1"
rollbar = "^0.16.3"
python-dotenv = "^0.21.0"
django-debug-toolbar = "^3.6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.2"
coverage = "^6.4.4"
parameterized = "^0.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
